# ps3-api

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
ps3_api/: constants.py  routes.py
ps3_api/entities/: __init__.py  pdf_data.py  pdf_upload.py  task_structure.py
ps3_api/services/: __init__.py  pdf_service.py  sse_service.py  task_service.py
